# coursera-automata

./: .gitignore  README.md  course.py  debug.py  misc.py  navigate.py  pyproject.toml  quiz.py  requirements.txt  script.py
